--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
 </head>
 
 <div class="footer">
-  <p>2019, Tristan LLC. All rights reserved.</p>
+  <script> &copy;</script> 2019 <script> new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script> , Tristan LLC.
 </div>
 </html> 
 
