--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
 </head>
 
 <div class="footer">
-  <script> &copy;</script> 2019 <script> new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script> , Tristan LLC.
+  <script> <script type="text/JavaScript"> var theDate=new Date() document.write(theDate.getFullYear()) </script>, Tristan LLC.
 </div>
 </html> 
 
