--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@ body {
 }
 </style>
 </head>
-
-<div class="footer">
-  <script> <script type="text/JavaScript"> var theDate=new Date() document.write(theDate.getFullYear()) </script>, Tristan LLC.
+ <p id=Year></p>, Tristan LLC.
+  <script> var Year = getFullYear() document.getElementById("Year").innerHTML = n; </script>
 </div>
 </html> 
 
