--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@ body {
 }
 </style>
 </head>
- <p id=Year></p>, Tristan LLC.
-  <script> var Year = getFullYear() document.getElementById("Year").innerHTML = n; </script>
+   <script> var Year = getFullYear() document.getElementById("Year").innerHTML = n; </script>
 </div>
+  <footer>
+ <p id=Year></p>, Tristan LLC.
+  </footer>
+  </div>
 </html> 
 
