--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-  <title>TriSearch</title>
-  <h1>TriSearch</h1>
+  <title>Google Search</title>
+  <h1 style="text-align: center">Google</h1>
   </div>
   <body>
 <div1></div1>
@@ -46,10 +46,10 @@ body {
 }
 </style>
 </head>
-   <script> var Year = getFullYear() document.getElementById("Year").innerHTML = n; </script>
+   <script> var Year = getFullYear() document.getElementById("Year").innerHTML = Year; </script>
 </div>
   <footer>
- <p id=Year></p>, Tristan LLC.
+ <p id="Year" style="text-align: center;"></p>, Google LLC.
   </footer>
   </div>
 </html> 
